@@ -21,27 +21,28 @@ import io.micronaut.context.ExecutionHandleLocator;
 import io.micronaut.context.env.Environment;
 import io.micronaut.core.annotation.AnnotationMetadata;
 import io.micronaut.core.annotation.AnnotationMetadataResolver;
-import io.micronaut.core.annotation.NonNull;
+import io.micronaut.core.annotation.AnnotationValue;
 import io.micronaut.core.annotation.Nullable;
-import io.micronaut.core.bind.annotation.Bindable;
 import io.micronaut.core.convert.ConversionService;
 import io.micronaut.core.type.Argument;
-import io.micronaut.core.type.ReturnType;
 import io.micronaut.core.util.ObjectUtils;
-import io.micronaut.core.util.StringUtils;
 import io.micronaut.http.HttpMethod;
 import io.micronaut.http.HttpRequest;
 import io.micronaut.http.HttpStatus;
 import io.micronaut.http.MediaType;
 import io.micronaut.http.annotation.Body;
-import io.micronaut.http.annotation.Status;
+import io.micronaut.http.annotation.RouteCondition;
+import io.micronaut.http.body.MessageBodyHandlerRegistry;
 import io.micronaut.http.filter.GenericHttpFilter;
 import io.micronaut.http.filter.HttpFilter;
-import io.micronaut.http.uri.UriMatchInfo;
 import io.micronaut.http.uri.UriMatchTemplate;
 import io.micronaut.inject.BeanDefinition;
 import io.micronaut.inject.ExecutableMethod;
 import io.micronaut.inject.MethodExecutionHandle;
+import io.micronaut.inject.MethodReference;
+import io.micronaut.inject.annotation.EvaluatedAnnotationValue;
+import io.micronaut.scheduling.executor.ExecutorSelector;
+import io.micronaut.scheduling.executor.ThreadSelection;
 import io.micronaut.web.router.exceptions.RoutingException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -58,6 +59,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.ExecutorService;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 
@@ -77,18 +79,20 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
 
     protected static final Logger LOG = LoggerFactory.getLogger(DefaultRouteBuilder.class);
 
-    static final Object NO_VALUE = new Object();
     protected final ExecutionHandleLocator executionHandleLocator;
     protected final UriNamingStrategy uriNamingStrategy;
     protected final ConversionService conversionService;
     protected final Charset defaultCharset;
+    private final ExecutorSelector executorSelector;
+
+    private final MessageBodyHandlerRegistry messageBodyHandlerRegistry;
 
     private DefaultUriRoute currentParentRoute;
-    private List<UriRoute> uriRoutes = new ArrayList<>();
-    private List<StatusRoute> statusRoutes = new ArrayList<>();
-    private List<ErrorRoute> errorRoutes = new ArrayList<>();
-    private List<FilterRoute> filterRoutes = new ArrayList<>();
-    private Set<Integer> exposedPorts = new HashSet<>(5);
+    private final List<UriRoute> uriRoutes = new ArrayList<>();
+    private final List<StatusRoute> statusRoutes = new ArrayList<>();
+    private final List<ErrorRoute> errorRoutes = new ArrayList<>();
+    private final List<FilterRoute> filterRoutes = new ArrayList<>();
+    private final Set<Integer> exposedPorts = new HashSet<>(5);
 
     /**
      * @param executionHandleLocator The execution handler locator
@@ -114,12 +118,15 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
         this.executionHandleLocator = executionHandleLocator;
         this.uriNamingStrategy = uriNamingStrategy;
         this.conversionService = conversionService;
-        if (executionHandleLocator instanceof ApplicationContext) {
-            ApplicationContext applicationContext = (ApplicationContext) executionHandleLocator;
+        if (executionHandleLocator instanceof ApplicationContext applicationContext) {
             Environment environment = applicationContext.getEnvironment();
             defaultCharset = environment.get("micronaut.application.default-charset", Charset.class, StandardCharsets.UTF_8);
+            this.executorSelector = applicationContext.findBean(ExecutorSelector.class).orElse(null);
+            this.messageBodyHandlerRegistry = applicationContext.findBean(MessageBodyHandlerRegistry.class).orElse(MessageBodyHandlerRegistry.EMPTY);
         } else {
             defaultCharset = StandardCharsets.UTF_8;
+            this.executorSelector = null;
+            this.messageBodyHandlerRegistry = MessageBodyHandlerRegistry.EMPTY;
         }
     }
 
@@ -189,7 +196,7 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
     public StatusRoute status(Class<?> originatingClass, HttpStatus status, Class<?> type, String method, Class<?>[] parameterTypes) {
         Optional<MethodExecutionHandle<Object, Object>> executionHandle = executionHandleLocator.findExecutionHandle((Class<Object>) type, method, parameterTypes);
 
-        MethodExecutionHandle<?, Object> executableHandle = executionHandle.orElseThrow(() ->
+        MethodExecutionHandle<Object, Object> executableHandle = executionHandle.orElseThrow(() ->
                 new RoutingException("No such route: " + type.getName() + "." + method)
         );
 
@@ -202,7 +209,7 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
     public StatusRoute status(HttpStatus status, Class<?> type, String method, Class<?>[] parameterTypes) {
         Optional<MethodExecutionHandle<Object, Object>> executionHandle = executionHandleLocator.findExecutionHandle((Class<Object>) type, method, parameterTypes);
 
-        MethodExecutionHandle<?, Object> executableHandle = executionHandle.orElseThrow(() ->
+        MethodExecutionHandle<Object, Object> executableHandle = executionHandle.orElseThrow(() ->
             new RoutingException("No such route: " + type.getName() + "." + method)
         );
 
@@ -215,7 +222,7 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
     public ErrorRoute error(Class<?> originatingClass, Class<? extends Throwable> error, Class<?> type, String method, Class<?>[] parameterTypes) {
         Optional<MethodExecutionHandle<Object, Object>> executionHandle = executionHandleLocator.findExecutionHandle((Class<Object>) type, method, parameterTypes);
 
-        MethodExecutionHandle<?, Object> executableHandle = executionHandle.orElseThrow(() ->
+        MethodExecutionHandle<Object, Object> executableHandle = executionHandle.orElseThrow(() ->
             new RoutingException("No such route: " + type.getName() + "." + method)
         );
 
@@ -228,7 +235,7 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
     public ErrorRoute error(Class<? extends Throwable> error, Class<?> type, String method, Class<?>[] parameterTypes) {
         Optional<MethodExecutionHandle<Object, Object>> executionHandle = executionHandleLocator.findExecutionHandle((Class<Object>) type, method, parameterTypes);
 
-        MethodExecutionHandle<?, Object> executableHandle = executionHandle.orElseThrow(() ->
+        MethodExecutionHandle<Object, Object> executableHandle = executionHandle.orElseThrow(() ->
             new RoutingException("No such route: " + type.getName() + "." + method)
         );
 
@@ -369,9 +376,10 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
      * @return an {@link UriRoute}
      */
     protected UriRoute buildRoute(HttpMethod httpMethod, String uri, Class<?> type, String method, Class<?>... parameterTypes) {
-        Optional<? extends MethodExecutionHandle<?, Object>> executionHandle = executionHandleLocator.findExecutionHandle(type, method, parameterTypes);
+        Optional<? extends MethodExecutionHandle<Object, Object>> executionHandle =
+                executionHandleLocator.findExecutionHandle((Class<Object>) type, method, parameterTypes);
 
-        MethodExecutionHandle<?, Object> executableHandle = executionHandle.orElseThrow(() ->
+        MethodExecutionHandle<Object, Object> executableHandle = executionHandle.orElseThrow(() ->
             new RoutingException("No such route: " + type.getName() + "." + method)
         );
 
@@ -387,14 +395,20 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
      *
      * @return an {@link UriRoute}
      */
-    protected UriRoute buildRoute(HttpMethod httpMethod, String uri, MethodExecutionHandle<?, Object> executableHandle) {
+    protected UriRoute buildRoute(HttpMethod httpMethod, String uri, MethodExecutionHandle<Object, Object> executableHandle) {
         return buildRoute(httpMethod.name(), httpMethod, uri, executableHandle);
     }
 
-    private UriRoute buildRoute(String httpMethodName, HttpMethod httpMethod, String uri, MethodExecutionHandle<?, Object> executableHandle) {
+    private UriRoute buildRoute(String httpMethodName, HttpMethod httpMethod, String uri, MethodExecutionHandle<Object, Object> executableHandle) {
         UriRoute route;
         if (currentParentRoute != null) {
-            route = new DefaultUriRoute(httpMethod, currentParentRoute.uriMatchTemplate.nest(uri), executableHandle, httpMethodName, conversionService);
+            route = new DefaultUriRoute(
+                httpMethod,
+                currentParentRoute.uriMatchTemplate.nest(uri),
+                executableHandle,
+                httpMethodName,
+                conversionService
+            );
             currentParentRoute.nestedRoutes.add((DefaultUriRoute) route);
         } else {
             route = new DefaultUriRoute(httpMethod, uri, executableHandle, httpMethodName, conversionService);
@@ -418,155 +432,43 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
      * @return The uri route corresponding to the method.
      */
     protected UriRoute buildBeanRoute(String httpMethodName, HttpMethod httpMethod, String uri, BeanDefinition<?> beanDefinition, ExecutableMethod<?, ?> method) {
-        MethodExecutionHandle<?, Object> executionHandle = executionHandleLocator
-                                                                .createExecutionHandle(beanDefinition, (ExecutableMethod<Object, ?>) method);
+        MethodExecutionHandle<Object, Object> executionHandle = (MethodExecutionHandle<Object, Object>) executionHandleLocator
+                                                                .createExecutionHandle(beanDefinition, (ExecutableMethod<Object, Object>) method);
         return buildRoute(httpMethodName, httpMethod, uri, executionHandle);
     }
 
     /**
-     * Abstract class for base {@link MethodBasedRoute}.
+     * Abstract class for base {@link MethodBasedRouteInfo}.
      */
-    abstract class AbstractRoute implements MethodBasedRoute, RouteInfo<Object> {
+    abstract class AbstractRoute implements Route {
         protected final List<Predicate<HttpRequest<?>>> conditions = new ArrayList<>();
-        protected final MethodExecutionHandle<?, ?> targetMethod;
+        protected final MethodExecutionHandle<Object, Object> targetMethod;
         protected final ConversionService conversionService;
-        protected List<MediaType> consumesMediaTypes;
-        protected List<MediaType> producesMediaTypes;
+        protected List<MediaType> consumesMediaTypes = List.of();
+        protected List<MediaType> producesMediaTypes = List.of();
         protected String bodyArgumentName;
         protected Argument<?> bodyArgument;
-        protected final Map<String, Argument<?>> requiredInputs;
-        protected final Class<?> declaringType;
-        protected boolean consumesMediaTypesContainsAll;
-        protected boolean producesMediaTypesContainsAll;
-        protected final HttpStatus definedStatus;
-        protected final boolean isWebSocketRoute;
-        private final boolean isVoid;
-        private final boolean suspended;
-        private final boolean reactive;
-        private final boolean single;
-        private final boolean async;
-        private final boolean specifiedSingle;
-        private final boolean isAsyncOrReactive;
 
         /**
          * @param targetMethod The target method execution handle
          * @param conversionService The conversion service
          * @param mediaTypes The media types
          */
-        AbstractRoute(MethodExecutionHandle targetMethod, ConversionService conversionService, List<MediaType> mediaTypes) {
+        AbstractRoute(MethodExecutionHandle<Object, Object> targetMethod, ConversionService conversionService, List<MediaType> mediaTypes) {
             this.targetMethod = targetMethod;
             this.conversionService = conversionService;
             this.consumesMediaTypes = mediaTypes;
-            this.declaringType = targetMethod.getDeclaringType();
-            this.producesMediaTypes = RouteInfo.super.getProduces();
-            this.consumesMediaTypes = RouteInfo.super.getConsumes();
-            suspended = targetMethod.getExecutableMethod().isSuspend();
-            reactive = RouteInfo.super.isReactive();
-            async = RouteInfo.super.isAsync();
-            single = RouteInfo.super.isSingleResult();
-            isVoid = RouteInfo.super.isVoid();
-            specifiedSingle = RouteInfo.super.isSpecifiedSingle();
-            isAsyncOrReactive = RouteInfo.super.isAsyncOrReactive();
             for (Argument<?> argument : targetMethod.getArguments()) {
                 if (argument.getAnnotationMetadata().hasAnnotation(Body.class)) {
                     this.bodyArgument = argument;
                 }
             }
-            Argument<?>[] requiredArguments = targetMethod.getArguments();
-            if (requiredArguments.length > 0) {
-                Map<String, Argument<?>> requiredInputs = new LinkedHashMap<>(requiredArguments.length);
-                for (Argument<?> requiredArgument : requiredArguments) {
-                    String inputName = resolveInputName(requiredArgument);
-                    requiredInputs.put(inputName, requiredArgument);
-                }
-                this.requiredInputs = Collections.unmodifiableMap(requiredInputs);
-            } else {
-                this.requiredInputs = Collections.emptyMap();
-            }
-            setConsumesMediaTypesContainsAll();
-            setProducesMediaTypesContainsAll();
-            this.definedStatus = targetMethod.enumValue(Status.class, HttpStatus.class).orElse(null);
-            this.isWebSocketRoute = targetMethod.hasAnnotation("io.micronaut.websocket.annotation.OnMessage");
-        }
-
-        @Override
-        public Class<?> getDeclaringType() {
-            return declaringType;
-        }
-
-        private void setConsumesMediaTypesContainsAll() {
-            this.consumesMediaTypesContainsAll = consumesMediaTypes == null || consumesMediaTypes.isEmpty() || consumesMediaTypes.contains(MediaType.ALL_TYPE);
-        }
-
-        private void setProducesMediaTypesContainsAll() {
-            this.producesMediaTypesContainsAll = producesMediaTypes == null || producesMediaTypes.isEmpty() || producesMediaTypes.contains(MediaType.ALL_TYPE);
-        }
-
-        /**
-         * Resolves the name for an argument.
-         *
-         * @param argument the argument
-         * @return the name
-         */
-        protected @NonNull String resolveInputName(@NonNull Argument argument) {
-            String inputName = argument.getAnnotationMetadata().stringValue(Bindable.NAME).orElse(null);
-            if (StringUtils.isEmpty(inputName)) {
-                inputName = argument.getName();
-            }
-            return inputName;
-        }
-
-        @NonNull
-        @Override
-        public AnnotationMetadata getAnnotationMetadata() {
-            return targetMethod.getAnnotationMetadata();
-        }
-
-        @Override
-        public ReturnType<?> getReturnType() {
-            return targetMethod.getReturnType();
-        }
-
-        @Override
-        public boolean isSuspended() {
-            return suspended;
-        }
-
-        @Override
-        public boolean isReactive() {
-            return reactive;
-        }
-
-        @Override
-        public boolean isSingleResult() {
-            return single;
-        }
-
-        @Override
-        public boolean isSpecifiedSingle() {
-            return specifiedSingle;
-        }
-
-        @Override
-        public boolean isAsync() {
-            return async;
-        }
-
-        @Override
-        public boolean isAsyncOrReactive() {
-            return isAsyncOrReactive;
-        }
-
-        @Override
-        public boolean isVoid() {
-            return isVoid;
         }
 
         @Override
         public Route consumes(MediaType... mediaTypes) {
             if (mediaTypes != null) {
-                this.consumesMediaTypes = Collections.unmodifiableList(Arrays.asList(mediaTypes));
-                setConsumesMediaTypesContainsAll();
+                this.consumesMediaTypes = List.of(mediaTypes);
             }
             return this;
         }
@@ -579,7 +481,6 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
         @Override
         public Route consumesAll() {
             this.consumesMediaTypes = Collections.emptyList();
-            setConsumesMediaTypesContainsAll();
             return this;
         }
 
@@ -606,8 +507,7 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
         @Override
         public Route produces(MediaType... mediaType) {
             if (mediaType != null) {
-                this.producesMediaTypes = Collections.unmodifiableList(Arrays.asList(mediaType));
-                setProducesMediaTypesContainsAll();
+                this.producesMediaTypes = List.of(mediaType);
             }
             return this;
         }
@@ -618,27 +518,13 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
         }
 
         @Override
-        public MethodExecutionHandle getTargetMethod() {
-            return this.targetMethod;
-        }
-
-        /**
-         * Whether the route permits a request body.
-         * @return True if the route permits a request body
-         */
-        protected boolean permitsRequestBody() {
-            return true;
-        }
-
-        @Override
         public boolean equals(Object o) {
             if (this == o) {
                 return true;
             }
-            if (!(o instanceof AbstractRoute)) {
+            if (!(o instanceof AbstractRoute that)) {
                 return false;
             }
-            AbstractRoute that = (AbstractRoute) o;
             return Objects.equals(consumesMediaTypes, that.consumesMediaTypes) &&
                     Objects.equals(producesMediaTypes, that.producesMediaTypes);
         }
@@ -652,7 +538,7 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
     /**
      * Default Error Route.
      */
-    class DefaultErrorRoute extends AbstractRoute implements ErrorRoute {
+    final class DefaultErrorRoute extends AbstractRoute implements ErrorRoute {
 
         private final Class<? extends Throwable> error;
         private final Class<?> originatingClass;
@@ -662,7 +548,7 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
          * @param targetMethod The target method execution handle
          * @param conversionService The conversion service
          */
-        public DefaultErrorRoute(Class<? extends Throwable> error, MethodExecutionHandle targetMethod, ConversionService conversionService) {
+        public DefaultErrorRoute(Class<? extends Throwable> error, MethodExecutionHandle<Object, Object> targetMethod, ConversionService conversionService) {
             this(null, error, targetMethod, conversionService);
         }
 
@@ -672,13 +558,28 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
          * @param targetMethod The target method execution handle
          * @param conversionService The conversion service
          */
-        public DefaultErrorRoute(
-                Class<?> originatingClass, Class<? extends Throwable> error,
-                MethodExecutionHandle targetMethod,
-                ConversionService conversionService) {
+        public DefaultErrorRoute(Class<?> originatingClass,
+                                 Class<? extends Throwable> error,
+                                 MethodExecutionHandle<Object, Object> targetMethod,
+                                 ConversionService conversionService) {
             super(targetMethod, conversionService, Collections.emptyList());
             this.originatingClass = originatingClass;
             this.error = error;
+        }
+
+        @Override
+        public ErrorRouteInfo<Object, Object> toRouteInfo() {
+            return new DefaultErrorRouteInfo<>(
+                    originatingClass,
+                    error,
+                    targetMethod,
+                    bodyArgumentName,
+                    bodyArgument,
+                    consumesMediaTypes,
+                    producesMediaTypes,
+                    conditions,
+                    conversionService,
+                    messageBodyHandlerRegistry);
         }
 
         @Override
@@ -690,24 +591,6 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
         @Override
         public Class<? extends Throwable> exceptionType() {
             return error;
-        }
-
-        @SuppressWarnings("unchecked")
-        @Override
-        public <T> Optional<RouteMatch<T>> match(Class<?> originatingClass, Throwable exception) {
-            if (originatingClass == this.originatingClass && error.isInstance(exception)) {
-                return Optional.of(new ErrorRouteMatch(exception, this, conversionService));
-            }
-            return Optional.empty();
-        }
-
-        @SuppressWarnings("unchecked")
-        @Override
-        public <T> Optional<RouteMatch<T>> match(Throwable exception) {
-            if (originatingClass == null && error.isInstance(exception)) {
-                return Optional.of(new ErrorRouteMatch(exception, this, conversionService));
-            }
-            return Optional.empty();
         }
 
         @Override
@@ -759,8 +642,7 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
 
         @Override
         public String toString() {
-            StringBuilder builder = new StringBuilder();
-            return builder.append(' ')
+            return new StringBuilder().append(' ')
                 .append(error.getSimpleName())
                 .append(" -> ")
                 .append(targetMethod.getDeclaringType().getSimpleName())
@@ -773,7 +655,7 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
     /**
      * Represents a route for an {@link io.micronaut.http.HttpStatus} code.
      */
-    class DefaultStatusRoute extends AbstractRoute implements StatusRoute {
+    final class DefaultStatusRoute extends AbstractRoute implements StatusRoute {
 
         private final HttpStatus status;
         private final Class<?> originatingClass;
@@ -783,7 +665,7 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
          * @param targetMethod The target method execution handle
          * @param conversionService The conversion service
          */
-        public DefaultStatusRoute(HttpStatus status, MethodExecutionHandle targetMethod, ConversionService conversionService) {
+        public DefaultStatusRoute(HttpStatus status, MethodExecutionHandle<Object, Object> targetMethod, ConversionService conversionService) {
             this(null, status, targetMethod, conversionService);
         }
 
@@ -793,10 +675,26 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
          * @param targetMethod The target method execution handle
          * @param conversionService The conversion service
          */
-        public DefaultStatusRoute(Class<?> originatingClass, HttpStatus status, MethodExecutionHandle targetMethod, ConversionService conversionService) {
+        public DefaultStatusRoute(Class<?> originatingClass, HttpStatus status, MethodExecutionHandle<Object, Object> targetMethod, ConversionService conversionService) {
             super(targetMethod, conversionService, Collections.emptyList());
             this.originatingClass = originatingClass;
             this.status = status;
+        }
+
+        @Override
+        public StatusRouteInfo<Object, Object> toRouteInfo() {
+            return new DefaultStatusRouteInfo<>(
+                    originatingClass,
+                    status,
+                    targetMethod,
+                    bodyArgumentName,
+                    bodyArgument,
+                    consumesMediaTypes,
+                    producesMediaTypes,
+                    conditions,
+                    conversionService,
+                    messageBodyHandlerRegistry
+            );
         }
 
         @Override
@@ -808,24 +706,6 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
         @Override
         public HttpStatus status() {
             return status;
-        }
-
-        @SuppressWarnings("unchecked")
-        @Override
-        public <T> Optional<RouteMatch<T>> match(Class<?> originatingClass, HttpStatus status) {
-            if (originatingClass == this.originatingClass && this.status == status) {
-                return Optional.of(new StatusRouteMatch(status, this, conversionService));
-            }
-            return Optional.empty();
-        }
-
-        @SuppressWarnings("unchecked")
-        @Override
-        public <T> Optional<RouteMatch<T>> match(HttpStatus status) {
-            if (this.originatingClass == null && this.status == status) {
-                return Optional.of(new StatusRouteMatch(status, this, conversionService));
-            }
-            return Optional.empty();
         }
 
         @Override
@@ -860,13 +740,12 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
             if (this == o) {
                 return true;
             }
-            if (!(o instanceof DefaultStatusRoute)) {
+            if (!(o instanceof DefaultStatusRoute that)) {
                 return false;
             }
             if (!super.equals(o)) {
                 return false;
             }
-            DefaultStatusRoute that = (DefaultStatusRoute) o;
             return status == that.status &&
                     Objects.equals(originatingClass, that.originatingClass);
         }
@@ -880,25 +759,13 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
     /**
      * The default route impl.
      */
-    class DefaultUriRoute extends AbstractRoute implements UriRoute {
+    final class DefaultUriRoute extends AbstractRoute implements UriRoute {
         final String httpMethodName;
         final HttpMethod httpMethod;
         final UriMatchTemplate uriMatchTemplate;
         final List<DefaultUriRoute> nestedRoutes = new ArrayList<>(2);
         private Integer port;
-
-        /**
-         * @param httpMethod The HTTP method
-         * @param uriTemplate The URI Template as a {@link CharSequence}
-         * @param targetMethod The target method execution handle
-         * @param conversionService The conversion service
-         */
-        DefaultUriRoute(HttpMethod httpMethod,
-                        CharSequence uriTemplate,
-                        MethodExecutionHandle targetMethod,
-                        ConversionService conversionService) {
-            this(httpMethod, uriTemplate, targetMethod, httpMethod.name(), conversionService);
-        }
+        private final RouteExecutorSelector executorSelector = new RouteExecutorSelector();
 
         /**
          * @param httpMethod The HTTP method
@@ -909,7 +776,7 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
          */
         DefaultUriRoute(HttpMethod httpMethod,
                         CharSequence uriTemplate,
-                        MethodExecutionHandle targetMethod,
+                        MethodExecutionHandle<Object, Object> targetMethod,
                         String httpMethodName,
                         ConversionService conversionService) {
             this(httpMethod, uriTemplate, MediaType.APPLICATION_JSON_TYPE, targetMethod, httpMethodName, conversionService);
@@ -920,28 +787,13 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
          * @param uriTemplate The URI Template as a {@link CharSequence}
          * @param mediaType The Media type
          * @param targetMethod The target method execution handle
-         * @param conversionService The conversion service
-         */
-        DefaultUriRoute(HttpMethod httpMethod,
-                        CharSequence uriTemplate,
-                        MediaType mediaType,
-                        MethodExecutionHandle targetMethod,
-                        ConversionService conversionService) {
-            this(httpMethod, uriTemplate, mediaType, targetMethod, httpMethod.name(), conversionService);
-        }
-
-        /**
-         * @param httpMethod The HTTP method
-         * @param uriTemplate The URI Template as a {@link CharSequence}
-         * @param mediaType The Media type
-         * @param targetMethod The target method execution handle
          * @param httpMethodName The actual name of the method - may differ from {@link HttpMethod#name()} for non-standard http methods
          * @param conversionService The conversion service
          */
         DefaultUriRoute(HttpMethod httpMethod,
                         CharSequence uriTemplate,
                         MediaType mediaType,
-                        MethodExecutionHandle targetMethod,
+                        MethodExecutionHandle<Object, Object> targetMethod,
                         String httpMethodName,
                         ConversionService conversionService) {
             this(httpMethod, new UriMatchTemplate(uriTemplate), Collections.singletonList(mediaType), targetMethod, httpMethodName, conversionService);
@@ -951,25 +803,12 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
          * @param httpMethod The HTTP method
          * @param uriTemplate The URI Template as a {@link UriMatchTemplate}
          * @param targetMethod The target method execution handle
-         * @param conversionService The conversion service
-         */
-        DefaultUriRoute(HttpMethod httpMethod,
-                        UriMatchTemplate uriTemplate,
-                        MethodExecutionHandle targetMethod,
-                        ConversionService conversionService) {
-            this(httpMethod, uriTemplate, targetMethod, httpMethod.name(), conversionService);
-        }
-
-        /**
-         * @param httpMethod The HTTP method
-         * @param uriTemplate The URI Template as a {@link UriMatchTemplate}
-         * @param targetMethod The target method execution handle
          * @param httpMethodName The actual name of the method - may differ from {@link HttpMethod#name()} for non-standard http methods
          * @param conversionService The conversion service
          */
         DefaultUriRoute(HttpMethod httpMethod,
                         UriMatchTemplate uriTemplate,
-                        MethodExecutionHandle targetMethod,
+                        MethodExecutionHandle<Object, Object> targetMethod,
                         String httpMethodName,
                         ConversionService conversionService) {
             this(httpMethod, uriTemplate, Collections.singletonList(MediaType.APPLICATION_JSON_TYPE), targetMethod, httpMethodName, conversionService);
@@ -980,33 +819,44 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
          * @param uriTemplate The URI Template as a {@link UriMatchTemplate}
          * @param mediaTypes The media types
          * @param targetMethod The target method execution handle
+         * @param httpMethodName The actual name of the method - may differ from {@link HttpMethod#name()} for non-standard http methods
          * @param conversionService The conversion service
          */
         DefaultUriRoute(HttpMethod httpMethod,
                         UriMatchTemplate uriTemplate,
                         List<MediaType> mediaTypes,
-                        MethodExecutionHandle targetMethod,
-                        ConversionService conversionService) {
-            this(httpMethod, uriTemplate, mediaTypes, targetMethod, httpMethod.name(), conversionService);
-        }
-
-        /**
-         * @param httpMethod The HTTP method
-         * @param uriTemplate The URI Template as a {@link UriMatchTemplate}
-         * @param mediaTypes The media types
-         * @param targetMethod The target method execution handle
-         * @param httpMethodName The actual name of the method - may differ from {@link HttpMethod#name()} for non-standard http methods
-         * @param conversionService The conversion service
-         */
-        DefaultUriRoute(HttpMethod httpMethod, UriMatchTemplate uriTemplate,
-                        List<MediaType> mediaTypes,
-                        MethodExecutionHandle targetMethod,
+                        MethodExecutionHandle<Object, Object> targetMethod,
                         String httpMethodName,
                         ConversionService conversionService) {
             super(targetMethod, conversionService, mediaTypes);
             this.httpMethod = httpMethod;
             this.uriMatchTemplate = uriTemplate;
             this.httpMethodName = httpMethodName;
+            if (targetMethod.isPresent(RouteCondition.class, AnnotationMetadata.VALUE_MEMBER)) {
+                AnnotationValue<RouteCondition> annotation = targetMethod.getAnnotation(RouteCondition.class);
+                if (annotation instanceof EvaluatedAnnotationValue<RouteCondition>) {
+                    where(request -> annotation.booleanValue().orElse(false));
+                }
+            }
+        }
+
+        @Override
+        public UriRouteInfo<Object, Object> toRouteInfo() {
+            return new DefaultUrlRouteInfo<>(
+                httpMethod,
+                uriMatchTemplate,
+                defaultCharset,
+                targetMethod,
+                bodyArgumentName,
+                bodyArgument,
+                consumesMediaTypes,
+                producesMediaTypes,
+                conditions,
+                port,
+                conversionService,
+                executorSelector,
+                messageBodyHandlerRegistry
+            );
         }
 
         @Override
@@ -1016,8 +866,7 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
 
         @Override
         public String toString() {
-            StringBuilder builder = new StringBuilder(getHttpMethodName());
-            return builder.append(' ')
+            return new StringBuilder(getHttpMethodName()).append(' ')
                 .append(uriMatchTemplate)
                 .append(" -> ")
                 .append(targetMethod.getDeclaringType().getSimpleName())
@@ -1084,13 +933,6 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
             return (UriRoute) super.where(condition);
         }
 
-        @SuppressWarnings("unchecked")
-        @Override
-        public Optional<UriRouteMatch> match(String uri) {
-            Optional<UriMatchInfo> matchInfo = uriMatchTemplate.match(uri);
-            return matchInfo.map(info -> new DefaultUriRouteMatch(info, this, defaultCharset, conversionService));
-        }
-
         @Override
         public UriMatchTemplate getUriMatchTemplate() {
             return this.uriMatchTemplate;
@@ -1101,16 +943,31 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
             return uriMatchTemplate.compareTo(o.getUriMatchTemplate());
         }
 
-        @Override
-        protected boolean permitsRequestBody() {
-            return HttpMethod.permitsRequestBody(httpMethod);
+        private final class RouteExecutorSelector implements ExecutorSelector {
+            @Override
+            public Optional<ExecutorService> select(MethodReference<?, ?> method, ThreadSelection threadSelection) {
+                if (DefaultRouteBuilder.this.executorSelector != null) {
+                    return DefaultRouteBuilder.this.executorSelector.select(targetMethod.getExecutableMethod(), threadSelection);
+                } else {
+                    return Optional.empty();
+                }
+            }
+
+            @Override
+            public Optional<ExecutorService> select(String name) {
+                if (DefaultRouteBuilder.this.executorSelector != null) {
+                    return DefaultRouteBuilder.this.executorSelector.select(name);
+                } else {
+                    return Optional.empty();
+                }
+            }
         }
     }
 
     /**
      * Define a single route.
      */
-    class DefaultSingleRoute extends DefaultResourceRoute {
+    final class DefaultSingleRoute extends DefaultResourceRoute {
 
         /**
          * @param resourceRoutes The resource routes
@@ -1191,10 +1048,15 @@ public abstract class DefaultRouteBuilder implements RouteBuilder {
         }
 
         @Override
+        public RouteInfo<Object> toRouteInfo() {
+            throw new IllegalStateException("Not implemented!");
+        }
+
+        @Override
         public ResourceRoute consumes(MediaType... mediaTypes) {
             if (mediaTypes != null) {
                 for (Route route : resourceRoutes.values()) {
-                    route.produces(mediaTypes);
+                    route.consumes(mediaTypes);
                 }
             }
             return this;
